chore: optimize Dockerfile by adding custom JRE build and reducing image size